# Crawler_Fetcher

./: .clangd  .gitignore  CMakeLists.txt  Downloader  FileOperations.cpp  FileOperations.cpp.old  FileOperations.h  Politeness.cpp  Politeness.cpp.old  Politeness.h  QueueManager.cpp  SetEnviroment.sh  UrlManagement.cpp  UrlManagement.h  a.out  callSystem.cpp  compile_commands.json  logs  main.cpp  readFile.cpp  test.txt
Backup/: nohup.out
Backup/mainProgram/downloader/: CMakeLists.txt  QueueManager.cpp  a.out  cURL-Downloader.cpp
Backup/mainProgram/downloader/NewSender/: CMakeLists.txt  SenderMain.cpp  SimplePublisher.cpp  a.out
Backup/mainProgram/downloader/messageManagerClass/: messageManagerClass.cpp
Backup/mainProgram/downloader/receiverTry/: NewReceiver11.cpp  NewReceiver2.cpp  NewReceiver3.cpp  NewReceiver6.cpp  NewReceiver7.cpp  NewReceiver9.cpp
Models/: BaseModel.cpp  ModelExample.cpp
ProcessorComponent/: SetEnviroment.sh
RabbitMQConnector/: MessageHandler.cpp  message_handler  receiver.py
Readfile&SystemCall/: createfile.cpp  test.txt
downloader/: a.out  cURL-Downloader.cpp  test.cpp
include/: MongoHandler.h  PerformHttpRequest.h  Politeness.h  QueueManager.h  UrlManager.h
messageManagerClass/: messageManagerClass.cpp
rabbitMqTest/: a.out  receiver.cpp  sender.cpp
src/: MongoHandler.cpp  PerformHttpRequest.cpp  Politeness.cpp  QueueManager.cpp  UrlManagement.cpp  main.cpp
tests/: dummyFiller  dummyQueue.cpp  httpReqtest.cpp  testUrlManagement  test_mongo_handler.cpp  test_politeness.cpp  test_queue_manager  test_queue_manager.cpp  (+2 more)
(+221 files in other folders)
